# dvc-tutorial

./: .python-version  README.md  pyproject.toml
data/: iris.csv.dvc
